--- a/vercel.json
+++ b/vercel.json
@@ -1,40 +1,11 @@
 {
+  "outputDirectory": "dist",
   "functions": {
     "api/*.php": {
-      "runtime": "vercel-php@0.6.2",
-      "memory": 1024,
-      "maxDuration": 10
+      "runtime": "vercel-php@0.6.2"
     }
   },
   "routes": [
-    {
-      "src": "/favicon.ico",
-      "headers": {
-        "Cache-Control": "public, max-age=31556952, immutable"
-      },
-      "dest": "/dist/favicon.ico"
-    },
-    {
-      "src": "/kamu.png",
-      "headers": {
-        "Cache-Control": "public, max-age=31556952, immutable"
-      },
-      "dest": "/dist/kamu.png"
-    },
-    {
-      "src": "/robots.txt",
-      "headers": {
-        "Cache-Control": "public, max-age=31556952, immutable"
-      },
-      "dest": "/dist/robots.txt"
-    },
-    {
-      "src": "/(css|js)/(.*)",
-      "headers": {
-        "Cache-Control": "public, max-age=86400, immutable"
-      },
-      "dest": "/dist/$1/$2"
-    },
     {
       "src": "/(.*)",
       "dest": "/api/index.php"
