--- a/vercel.json
+++ b/vercel.json
@@ -1,14 +1,14 @@
 {
-  "outputDirectory": "dist",
-  "functions": {
-    "api/*.php": {
-      "runtime": "vercel-php@0.6.2"
+  "builds": [
+    {
+      "src": "dist/**",
+      "use": "@vercel/static"
     }
-  },
+  ],
   "routes": [
     {
       "src": "/(.*)",
-      "dest": "/api/index.php"
+      "dest": "/dist/index.html"
     }
   ]
 }
